syntax = "proto3";

package rivet.backend.pkg.team_dev.game_list;

import "proto/common.proto";

message Request {
	repeated rivet.common.Uuid team_ids = 1;
}

message Response {
	message TeamGames {
		rivet.common.Uuid team_id = 1;
		repeated rivet.common.Uuid game_ids = 2;
	}

	repeated TeamGames teams = 1;
}
